# nve-sintef-model

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
notebooks/: 01. Inspect.ipynb
nve_sintef_model/exe/detmod/: detmod_lag_dogntilsig.py
nve_sintef_model/exe/enmdat/: enmdat_lag_enkelt_eksogent_omr.py  enmdat_legg_inn_omrnr_navn.py  enmdat_utvid_dataperiode.py
nve_sintef_model/exe/kurvetegn/: Nettflyt.py  __init__.py
nve_sintef_model/exe/med/: med_lag_enkel_smaakraft_omr.py  med_legg_inn_restriksjoner.py
nve_sintef_model/exe/prodrisk/: prodrisk_kjor.py
nve_sintef_model/exe/saminn/: saminn_kjor_forste_gang.py
nve_sintef_model/input/: emps_script_lag_fastkon.py  emps_script_lag_prefdat.py  emps_script_oppdater_forbruksdata.py  emps_script_slett_fastkon.py  emps_script_slett_prefdat.py
nve_sintef_model/kalibrering/: autokalib_funksjoner.py  plott_fg_magstat_vs_modell.py  plott_fg_magstat_vs_modell_og_krv.py  plott_modell_mag_og_pris.py  read_kalib_df.py  sintef_autokalib.py  skriv_autkal_inn.py
nve_sintef_model/output/: hente_resultater_pkl.py
nve_sintef_model/plot/: __init__.py  makeplot.py  makeplot_kraftsituasjonen.py
nve_sintef_model/prognoseresultater/: __init__.py  prognoseresultater.py
nve_sintef_model/utils/: __init__.py  endre_header_maskenett.py  endre_kode_detd.py  filesystem.py  find_replace.py  get_aar_kobling_df.py  get_ntimen_from_uketime_tsnitt_map.py  get_ntimen_liste.py  get_uketime_tsnitt_map.py  oppdatere_enmd_filer.py  run_batch.py  run_sintef.py  sjekk_feilmeldinger.py  type_check.py
scripts/: reg_ureg_inflow.py
(+75 files in other folders)
